--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            storeFile file('C:/Users/parimal/Dropbox/development-april-15/daily_chores_key.jks')
+            keyAlias 'dailychores'
+            keyPassword 'chaipari'
+            storePassword 'chaipari'
+        }
+    }
     compileSdkVersion 22
-    buildToolsVersion "22.0.0"
-
+    buildToolsVersion "22.0.1"
     defaultConfig {
         applicationId "com.jarvis.be.dailychores"
         minSdkVersion 14
@@ -13,8 +20,9 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
     sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/raw'] } }
@@ -22,10 +30,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.getbase:floatingactionbutton:1.9.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.0.0'
-    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.afollestad:material-dialogs:0.7.0.1'
     compile 'de.psdev.licensesdialog:licensesdialog:1.7.0'
 }
